# clerk-react-fastapi-template

./: .gitignore  readme.md
backend/: main.py  pyproject.toml
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: health.py
backend/app/core/: config.py
backend/app/schemas/: health.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: About.tsx  Authentication.tsx  Contact.tsx  Footer.tsx  Header.tsx  Home.tsx  Layout.tsx
